fixed xeditor table row overflow

--- a/client/app/transaction/transaction.css
+++ b/client/app/transaction/transaction.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -100,8 +100,17 @@ body {
 	background-color: #96b4d2;
 }
 
+.editable-click, a.editable-click {
+  color: #555555;
+  border-bottom: none;
+}
 
-
+/*td:has(.form-inline.editable-wrap) {*/
+  /*padding: 5px;*/
+/*}*/
+table.table-striped > tbody > tr > td, table.table-striped > thead > tr > th {
+  white-space: nowrap;
+}
 
 
 
